Created profil templet

--- a/Layout/GF/src/app/profile/profile.component.html
+++ b/Layout/GF/src/app/profile/profile.component.html
@@ -1,3 +1,185 @@
-<p>
-  profile works!
-</p>
+<p></p>
+<div class=" text-center" style="height: 100px">
+  <h1>My First Bootstrap Page</h1>
+
+</div>
+<div class="container">
+  <div class="row ">
+
+    <div class="col-sm-4">
+      <div class="card profilImg d-flex flex-wrap mt-0">
+        <img src="https://www.totallybound.com/image/cache/data/Authors/author_profile_1-300x400.png" alt="Avatar" style="width:100%">
+      </div>
+      <div class="col-sm-12 text-center prof d-flex flex-wrap mt-4">
+        <b> РЕДАКТИРОВАТЬ ПРОФИЛЬ</b>
+      </div>
+    </div>
+
+    <div class="col-sm-8 d-flex flex-wrap mt-10">
+
+      <div class="card">
+        <div class="card-header "><b>Личный информация</b></div>
+        <div class="card-body">
+
+          <div class="row d-flex align-items-center flex-wrap mt-0">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">
+              .col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-sm-12">
+    </div>
+
+
+    <div class="col-sm-4"></div>
+    <div class="col-sm-8">
+      <div class="card">
+        <div class="card-header"><b>Образование и  опыт</b></div>
+        <div class="card-body">
+
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">
+              .col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5.col-sm-5
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12">
+    </div>
+
+
+    <div class="col-sm-4"></div>
+    <div class="col-sm-8">
+      <div class="card">
+        <div class="card-header"><b>Образование и  опыт</b></div>
+        <div class="card-body">
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-6"><div class="foto col-sm-12">
+              <div> <i class="fotoIc material-icons">camera_alt</i></div>
+              <p class="hint"> Вы можете перетащить фото сюда</p>
+              <p class="hint"> или</p>
+              <div class="uploadFail">Выберите файл</div>
+            </div></div>
+            <div class="col-sm-6"><div class="foto col-sm-12">
+              <div> <i class="fotoIc material-icons">camera_alt</i></div>
+              <p class="hint"> Вы можете перетащить фото сюда</p>
+              <p class="hint"> или</p>
+              <div class="uploadFail">Выберите файл</div>
+            </div></div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12">
+    </div>
+
+
+    <div class="col-sm-4"></div>
+    <div class="col-sm-8">
+      <div class="card">
+        <div class="card-header"><b>Образование и  опыт</b></div>
+        <div class="card-body">
+
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+          <div class="row d-flex align-items-center flex-wrap mt-2">
+            <div class="col-sm-4"><b>.col-sm-3</b></div>
+            <div class="col-sm-8">.col-sm-5</div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
